# bumpalo

./: Cargo.toml
benches/: allocator_api.rs  benches.rs
src/: alloc.rs  boxed.rs  lib.rs
src/collections/: collect_in.rs  raw_vec.rs  string.rs  vec.rs
src/collections/str/: lossy.rs
tests/: try_alloc.rs
tests/all/: alloc_fill.rs  alloc_try_with.rs  allocator_api.rs  tests.rs  try_alloc_try_with.rs  vec.rs
tests/all/serde/: string.rs  vec.rs
